Using workers for XHR requests
Updating to user works for XHR requests, has improved it

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "mosaic",
   "version": "0.0.0",
   "scripts": {
-    "start": "node server.js",
+    "start": "node --max-old-space-size=2048 server.js",
     "//" : ["please note: when using compile, you will need to delete the 'flowless' directory first",
     "On my machine in windows, I would run 'rmdir \"js/flowless\" /s /q && npm run compile' in the terminal"],
     "compile": "babel js --out-dir js/flowless"
